Fix spacing and markbot errors

--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,9 @@ h1 {
   border-left: none;
 }
 
-.padd {
-  padding-bottom: 1em;
-}
-
 @media only screen and (min-width: 60em) {
 
-  .psh {
+  .gutter-right {
     padding-right: .5rem;
   }
 
